freest/test/prog/Invalid/SessionTypes/ExposeInput/ExposeInput.fst
module ExposeInput where

foo : Int
foo = receive 1